k8s_manifests/01-config.yaml
---
# Namespace projektu
apiVersion: v1
kind: Namespace
metadata:
  name: social-media-prod
  labels:
    environment: production
