k8s_manifests/04-frontend.yaml
---
# Frontend Deployment - serwer nginx (non-root)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: social-media-prod
  annotations:
    kubernetes.io/change-cause: "Wdrożenie frontendu Nginx jako non-root z sondami"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101 # nginx-unprivileged domyślnie używa użytkownika o ID 101
      containers:
        - name: nginx
          image: szymonkozyra/post-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5

---
# Frontend Service
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: social-media-prod
spec:
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP # zmiana z NodePort, ruch wejdzie przez Ingress

---
# Ingress - brama wejściowa do systemu
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: social-media-ingress
  namespace: social-media-prod
spec:
  rules:
    - host: post-manager.local
      http:
        paths:
          # ten ruch kierujemy do backendu
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 8080
          - path: /swagger-ui
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 8080
          - path: /v3/api-docs
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 8080
          # cały pozostały ruch kierujemy do frontendu
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080
