k8s_manifests/02-database.yaml
---
# StatefulSet - stanowa baza danych
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-statefulset
  namespace: social-media-prod
  annotations:
    kubernetes.io/change-cause: "Wdrożenie bazy jako StatefulSet z podpiętym PVC i wstrzykniętą konfiguracją"
spec:
  serviceName: "db-service"
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: postgres
          image: szymonkozyra/post-db:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          livenessProbe: # Sonda sprawdzająca, czy silnik bazy żyje
            exec:
              command: ["pg_isready", "-U", "postgres", "-d", "productcataloglab"]
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe: # Sonda sprawdzająca, czy można już wysyłać zapytania SQL
            exec:
              command: ["pg_isready", "-U", "postgres", "-d", "productcataloglab"]
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc

---
# Service - wewnętrzny punkt dostępu do bazy
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: social-media-prod
spec:
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP # baza ukryta wewnątrz klastra (brak dostępu z zewnątrz)

---
# Network Policy - Zapora sieciowa dla bazy danych
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-network-policy
  namespace: social-media-prod
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              # tylko pody z etykietą 'app: backend' mogą połączyć się z bazą na porcie 5432
              app: backend
      ports:
        - protocol: TCP
          port: 5432
